java-was-app/deployments/Service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: "my-liberty-app"
    backstage.io/kubernetes-id: "my-liberty-app"
  name: "my-liberty-app"
spec:
  ports:
    - name: http
      port: 9080
      targetPort: 9080
  selector:
    deployment: "my-liberty-app"
