java-was-app/deployments/Route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: "my-liberty-app"
    backstage.io/kubernetes-id: "my-liberty-app"
  name: "my-liberty-app"
spec:
  port:
    targetPort: 9080
  to:
    kind: Service
    name: "my-liberty-app"
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
